--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
+
   <head>
+
     <title>My first website</title>
+
   </head>
+
   <body>
+
     <h1>Hello world!</h1>
     <p>Welcome to my first website.</p>
     <h2>Web Security</h2>
     <p id="web-security-question">How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
-    <p id="web-security-answer">[Answer here]</p>
+    <p id="web-security-answer">[We need to secure authorization and authentication, which makes them hard to crack. A stronger network security to protect the exchange of packets of data across the network.]</p>
+    
   </body>
+  
 </html>
