--- a/index.html
+++ b/index.html
@@ -14,7 +14,37 @@
     <h2>Web Security</h2>
     <p id="web-security-question">How would you advise a potential client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
     <p id="web-security-answer">[We need to secure authorization and authentication, which makes them hard to crack. A stronger network security to protect the exchange of packets of data across the network.]</p>
-    
+     <br>
+     <br> <br>
   </body>
-  
+
+  <style>
+    .button-like {
+      background-color: blue;
+      color: antiquewhite;
+      height: 36px;
+      width: 105px; 
+      border-radius: 5px;
+      cursor: pointer;  
+      border: none;
+    }
+    .button-dislike {
+      background-color: red;
+      color: antiquewhite;
+      height: 36px;
+      width: 105px;
+      cursor: pointer;
+      border-radius: 10px;
+      border-color: blue;
+      border-width: 10px;
+      border-style: solid;
+      margin-left: 10px;
+
+
+    }
+  </style>
+
+  <button class="button-like">Like</button>
+  <button class="button-dislike">Dislike</button>
+
 </html>
